--- a/app/styles/less/mixins.less
+++ b/app/styles/less/mixins.less
@@ -7,6 +7,13 @@
 .display-none {
 	display:none;
 }
+.img-rotate {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
 .v-align:after {
     display: inline-block;
     height: 100%;
