--- a/app/styles/less/showcase-blocks.less
+++ b/app/styles/less/showcase-blocks.less
@@ -1,5 +1,5 @@
 .block-case-studies {
-	background:url('../../images/pen.jpg');
+	background:url('../../images/block-case-studies.jpg');
 	background-size:cover;
 	background-position:center;
 	width:100%;
@@ -24,9 +24,9 @@
 	}
 }
 .block-work {
-	background:url('../../images/pen.jpg');
+	background:url('../../images/block-work.jpg');
 	background-size:cover;
-	background-position:center;
+	background-position:50% 20%;
 	width:100%;
 	//padding-top:5rem;
 	//padding-bottom:5rem;
