--- a/app/styles/less/showcase-work.less
+++ b/app/styles/less/showcase-work.less
@@ -1,3 +1,7 @@
+.slides {
+    display:none;
+}
+
 .wk-main {
     position: relative;
     width: 100%;
@@ -5,7 +9,7 @@
     overflow: hidden;
     h3 {
         color:white;
-        font-family:@primary-font-reg;
+        font-family:@primary-font-bold;
     }
     & > section {
         position: absolute;
@@ -23,7 +27,7 @@
             opacity: 0;
             pointer-events: none;
         }
-        h3, p {
+        h3, p, img.icon-plugmedia {
             opacity:0;
         }
     }
@@ -44,7 +48,7 @@
     & > section:nth-child(3) {
         top: 0;
         left: 50%;
-        background:url(../../images/ely-thumb.jpg);
+        background:url(../../images/h2-thumb.jpg);
         background-position:center;
         background-size:cover;
     }
@@ -71,48 +75,63 @@
         background:url(../../images/lincoln-thumb.jpg);
         background-position:center;
         background-size:cover;
+        p {
+            margin-top:-2rem;
+        }
     }
     & > section:nth-child(7) {
         top: 33.3%;
         left: 50%;
-        background:url(../../images/ely-thumb.jpg);
+        background:url(../../images/relo-thumb.jpg);
         background-position:center;
         background-size:cover;
+        p {
+            margin-top:-1.5rem;
+        }
     }
     & > section:nth-child(8) {
         top: 33.3%;
         left: 75%;
-        background:url(../../images/ely-thumb.jpg);
+        background:url(../../images/mutz-thumb.jpg);
         background-position:center;
         background-size:cover;
+        p {
+            margin-top:-1.5rem;
+        }
     }
     & > section:nth-child(9) {
         top: 66.6%;
         left: 0;
-        background:url(../../images/ely-thumb.jpg);
+        background:url(../../images/flowers-thumb.jpg);
         background-position:center;
         background-size:cover;
+        p {
+            margin-top:-2rem;
+        }
     }
     & > section:nth-child(10) {
         top: 66.6%;
         left: 25%;
-        background:url(../../images/energy-action-thumb.jpg);
+        background:url(../../images/energy-thumb.jpg);
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(11) {
         top: 66.6%;
         left: 50%;
-        background:url(../../images/ely-thumb.jpg);
+        background:url(../../images/mactivate-thumb.jpg);
         background-position:center;
         background-size:cover;
     }
     & > section:nth-child(12) {
         top: 66.6%;
         left: 75%;
-        background:url(../../images/ely-thumb.jpg);
+        background:url(../../images/irishtimes-thumb.jpg);
         background-position:center;
         background-size:cover;
+        p {
+            margin-top:-2rem;
+        }
     }
     & > section.wk-expand {
         width: 100%;
@@ -180,15 +199,26 @@
         -moz-transition: all 0.2s ease-in-out;
         transition: all 0.2s ease-in-out;
     }
+    img.icon-plugmedia {
+        max-width:3em;
+        max-height:3em;
+        margin-top:1rem;
+        -webkit-transition: all 0.2s ease-in-out;
+        -moz-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
+        margin-top:2rem;
+    }
     h3 {
         font-size:1.8em;
         text-transform: uppercase;
-        margin-top:3rem;
+        margin-top:-2rem;
+        line-height:1em;
     }
     p {
-        font-size:1em;
+        font-size:0.8em;
         color:white;
         font-family:@secondary-font;
+        margin-top:-3rem;
     }
 }
 .wk-icon {
@@ -223,7 +253,7 @@
 .wk-icon-close:before {
     content: "\f057";
 }
-.wk-content,div.wk-panel-items &>div &>div {
+div.wk-panel-items &>div &>div {
     opacity: 0;
     pointer-events: none;
     position: absolute;
@@ -236,6 +266,13 @@
     overflow-y: auto;
 }
 .wk-content {
+    z-index:999;
+    position:absolute;
+    bottom:0;
+    left:50%;
+    width:8rem;
+    margin-left:-4rem;
+    display:none;
     p {
         margin: 0 auto;
         padding-bottom: 15px;
@@ -272,13 +309,25 @@
             a {
                 display: block;
                 padding: 0;
-                border: 8px solid rgba(0,0,0,0.1);
+                //border: 8px solid rgba(0,0,0,0.1);
                 img {
                     display: block;
                     max-width: 100%;
                 }
             }
         }
+    }
+    button {
+        color:@primary-color;
+        border:2px solid @primary-color;
+        background:white;
+        margin-top:2rem;
+        font-size:1.3em;
+        font-family:@primary-font-reg;
+        text-transform: uppercase;
+        width:7rem;
+        height:2.5rem;
+
     }
 }
 div.wk-panel-items,div.wk-panel-items &>div {
@@ -292,7 +341,8 @@ div.wk-panel-items {
     top: 100%;
     z-index: 999;
     & > div {
-        background: #3ba5db;
+        background: white;
+        border-top:5px solid @primary-color;
         z-index: 0;
         opacity: 0;
         -webkit-transform: translateY(0);
@@ -307,7 +357,8 @@ div.wk-panel-items {
             margin: 0 auto;
             opacity: 1;
             bottom: 90px;
-            top: 90px;
+            top: 0;
+            padding-top:3rem;
             pointer-events: auto;
             h3 {
                 font-size: 2.4em;
@@ -327,14 +378,20 @@ div.wk-panel-items {
     nav {
         position: absolute;
         z-index: 9999;
-        width: 216px;
+        width: 5rem;
         left: 50%;
-        top: 0px;
-        margin-left: -108px;
+        //top: 0px;
+        margin-left: -2.5rem;
         opacity: 0;
         -webkit-transition: opacity 0.2s ease-in-out 0.5s;
         -moz-transition: opacity 0.2s ease-in-out 0.5s;
         transition: opacity 0.2s ease-in-out 0.5s;
+        height:2rem;
+        background:@text-grey;
+        bottom:0;
+        .wk-icon-close:before {
+            content: "\f107";
+        }
         span.wk-next-work {
             font-weight: 700;
             letter-spacing: 2px;
@@ -348,13 +405,13 @@ div.wk-panel-items {
     & > div.wk-show-work {
         z-index: 1000;
         opacity: 1;
-        -webkit-transform: translateY(-100%);
+        -webkit-transform: translateY(-50%);
         -webkit-transition: -webkit-transform 0.5s ease-in-out;
-        -moz-transform: translateY(-100%);
+        -moz-transform: translateY(-50%);
         -moz-transition: -moz-transform 0.5s ease-in-out;
-        transform: translateY(-100%);
+        transform: translateY(-50%);
         transition: transform 0.5s ease-in-out;
-        -ms-transform: translateY(-100%);
+        -ms-transform: translateY(-50%);
     }
     & > div.wk-hide-current-work {
         opacity: 0;
@@ -371,10 +428,10 @@ div.wk-panel-items {
 div.wk-panel-items.wk-panel-items-show {
     nav {
         opacity: 1;
-        top: -70px;
+        top: -2rem;
         span {
-            float: left;
-            margin: 5px;
+            //float: left;
+            //margin: 5px;
         }
     }
 }
@@ -400,7 +457,7 @@ section.wk-expand {
             -moz-transition: background 0.2s linear;
             transition: background 0.2s linear;
             &:hover {
-                h3, p {
+                h3, p, img.icon-plugmedia {
                     -webkit-transform: translateY(-15px);
                     -moz-transform: translateY(-15px);
                     -ms-transform: translateY(-15px);
@@ -408,6 +465,16 @@ section.wk-expand {
                     opacity:1;
                 }
                 background: @primary-color + 5;
+            }
+        }
+    }
+}
+.touch {
+    section:not(.wk-expand) {
+        .wk-box {
+            background:rgba(231, 76, 60, 0.9);
+            h3, p {
+                opacity:1;
             }
         }
     }
@@ -438,8 +505,10 @@ section.wk-expand .wk-content,section.wk-expand .wk-icon-close {
 		width: 40%;
 	}
 }
-
-
-/////////////////////////////////
-
-
+div.wk-panel-items#wk-panel-work-items {
+    p {
+        font-family:@secondary-font;
+        font-size:1.2em;
+        color:@text-grey;
+    }
+}
